# amake

./: CMakeLists.txt  README.md  configure.ac  makefile.am
